# Lighting-Specifications-Generator

./: README.md  SOLUTION_SUMMARY.md  analyze_excel.py  app.py  excel_processor.py  final_excel_processor.py  pyproject.toml  requirements.txt  simple_excel_processor.py  test_processor.py
