[project]
name = "lighting-specifications-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pywin32>=311",
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5.0.0",
]
